// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundaryTest renders child 1`] = `
<Text>
  Render test
</Text>
`;

exports[`ErrorBoundaryTest renders placeholder when child render fails 1`] = `
<Text>
  Error was catched
</Text>
`;
